--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="home-page">
 
   <header class="site-header">
     <div class="container header-content">
       <a class="logo" href="#home">
-        <img src="images/logo_2.png" alt="FA Group">
+        <img src="images/logo-new.png" alt="FA Group">
       </a>
       <button class="hamburger-menu" id="hamburgerMenu" type="button" aria-label="Menü aç">
         <span></span>
@@ -169,7 +169,7 @@
           </ul>
         </div>
         <div class="footer-brand">
-          <img src="images/logo_2.png" alt="FA Group" class="footer-logo">
+          <img src="images/logo-new.png" alt="FA Group" class="footer-logo">
           <div class="footer-social">
             <a href="https://www.linkedin.com/" target="_blank" rel="noopener" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
             <a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="X"><i class="fab fa-x-twitter"></i></a>
