--- a/trade.html
+++ b/trade.html
@@ -12,7 +12,7 @@
   <header class="site-header">
     <div class="container header-content">
       <a class="logo" href="index.html">
-        <img src="images/logo_2.png" alt="FA Group">
+        <img src="images/logo-new.png" alt="FA Group">
       </a>
       <button class="hamburger-menu" id="hamburgerMenu" type="button" aria-label="Menü aç">
         <span></span>
@@ -263,7 +263,7 @@
         </ul>
       </div>
       <div class="footer-brand">
-        <img src="images/logo_2.png" alt="FA Group" class="footer-logo">
+        <img src="images/logo-new.png" alt="FA Group" class="footer-logo">
         <div class="footer-social">
           <a href="https://www.linkedin.com/" target="_blank" rel="noopener" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
           <a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="X"><i class="fab fa-x-twitter"></i></a>
