feat: About FA Group section eklendi - şirket hakkında detaylı bilgi ile profesyonel tasarım

--- a/index.html
+++ b/index.html
@@ -107,7 +107,26 @@
       </div>
     </section>
 
-    <section id="about" class="life-fa">
+    <section id="about" class="about-fa-group">
+      <div class="container">
+        <div class="about-intro">
+          <h2 class="about-main-title">About FA Group</h2>
+          <div class="about-content-wrapper">
+            <p class="about-main-text">
+              FA Group is a diversified company operating in the construction, energy, and commodity trade sectors. Established to provide integrated solutions across these strategic industries, the Group combines technical expertise, market intelligence, and financial discipline to deliver consistent value to its partners and stakeholders.
+            </p>
+            <p class="about-main-text">
+              Through its subsidiaries and strategic partnerships, FA Group executes large-scale infrastructure projects, develops sustainable energy initiatives, and facilitates global commodity transactions. Our operations are built on the principles of integrity, efficiency, and long-term growth, ensuring reliability and performance across every business line.
+            </p>
+            <p class="about-main-text">
+              With a professional team and an international outlook, FA Group continues to strengthen its position as a trusted partner in regional and global markets, contributing to economic development and sustainable progress.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="life-fa">
       <div class="container">
         <div class="about-slider" id="aboutSlider" tabindex="0" aria-label="FA Group hakkında slayt gösterisi">
           <div class="about-slide active" data-label="Our Vision">
