--- a/energy.html
+++ b/energy.html
@@ -13,6 +13,7 @@
     <div class="container header-content">
       <a class="logo" href="index.html">
         <img src="images/logo-new.png" alt="FA Group">
+        <span class="header-slogan">Engineering Value. Powering the Future.</span>
       </a>
       <button class="hamburger-menu" id="hamburgerMenu" type="button" aria-label="Menü aç">
         <span></span>
