--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="container header-content">
       <a class="logo" href="#home">
         <img src="images/logo-new.png" alt="FA Group">
+        <span class="header-slogan">Engineering Value. Powering the Future.</span>
       </a>
       <button class="hamburger-menu" id="hamburgerMenu" type="button" aria-label="Menü aç">
         <span></span>
@@ -113,13 +114,7 @@
           <h2 class="about-main-title">About FA Group</h2>
           <div class="about-content-wrapper">
             <p class="about-main-text">
-              FA Group is a diversified company operating in the construction, energy, and commodity trade sectors. Established to provide integrated solutions across these strategic industries, the Group combines technical expertise, market intelligence, and financial discipline to deliver consistent value to its partners and stakeholders.
-            </p>
-            <p class="about-main-text">
-              Through its subsidiaries and strategic partnerships, FA Group executes large-scale infrastructure projects, develops sustainable energy initiatives, and facilitates global commodity transactions. Our operations are built on the principles of integrity, efficiency, and long-term growth, ensuring reliability and performance across every business line.
-            </p>
-            <p class="about-main-text">
-              With a professional team and an international outlook, FA Group continues to strengthen its position as a trusted partner in regional and global markets, contributing to economic development and sustainable progress.
+              FA Group is a diversified company operating in the construction, energy, and commodity trade sectors. Established to provide integrated solutions across these strategic industries, the Group combines technical expertise, market intelligence, and financial discipline to deliver consistent value to its partners and stakeholders. Through its subsidiaries and strategic partnerships, FA Group executes large-scale infrastructure projects, develops sustainable energy initiatives, and facilitates global commodity transactions. Our operations are built on the principles of integrity, efficiency, and long-term growth, ensuring reliability and performance across every business line. With a professional team and an international outlook, FA Group continues to strengthen its position as a trusted partner in regional and global markets, contributing to economic development and sustainable progress.
             </p>
           </div>
         </div>
