Turkey yerine Türkiye, başlık sloganı güncellendi, el yazısı font eklendi

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>FA Group - Engineering & Construction Excellence</title>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600;700&family=Inter:wght@400;500;600&family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -111,7 +111,7 @@
     <section id="about" class="about-fa-group">
       <div class="container">
         <div class="about-intro">
-          <h2 class="about-main-title">About FA Group</h2>
+          <h2 class="about-main-title">Engıneerıng Value. Powerıng the Future</h2>
           <div class="about-content-wrapper">
             <p class="about-main-text">
               FA Group is a diversified company operating in the construction, energy, and commodity trade sectors. Established to provide integrated solutions across these strategic industries, the Group combines technical expertise, market intelligence, and financial discipline to deliver consistent value to its partners and stakeholders. Through its subsidiaries and strategic partnerships, FA Group executes large-scale infrastructure projects, develops sustainable energy initiatives, and facilitates global commodity transactions. Our operations are built on the principles of integrity, efficiency, and long-term growth, ensuring reliability and performance across every business line. With a professional team and an international outlook, FA Group continues to strengthen its position as a trusted partner in regional and global markets, contributing to economic development and sustainable progress.
@@ -191,7 +191,7 @@
         </div>
         <div class="footer-contact">
           <h3 class="footer-heading">Contact Us</h3>
-          <address>Levent District, Yeni Sülün Street, Begonya No.2<br>Beşiktaş, Istanbul Turkey</address>
+          <address>Levent District, Yeni Sülün Street, Begonya No.2<br>Beşiktaş, Istanbul Türkiye</address>
           <a href="mailto:info@holding-fa.com" class="footer-email">info@holding-fa.com</a>
           <a href="tel:+902128129245" class="footer-phone">+90 212 812 92 45</a>
         </div>
