--- a/trade.html
+++ b/trade.html
@@ -272,7 +272,7 @@
       </div>
       <div class="footer-contact">
         <h3 class="footer-heading">Contact Us</h3>
-        <address>Levent District, Yeni Sülün Street, Begonya No.2<br>Beşiktaş, Istanbul Turkey</address>
+        <address>Levent District, Yeni Sülün Street, Begonya No.2<br>Beşiktaş, Istanbul Türkiye</address>
         <a href="mailto:info@holding-fa.com" class="footer-email">info@holding-fa.com</a>
         <a href="tel:+902128129245" class="footer-phone">+90 212 812 92 45</a>
       </div>
