Add gradient section-divider between requested sections on trade/energy/construction

--- a/construction.html
+++ b/construction.html
@@ -190,6 +190,7 @@
     <!-- CONSTRUCTION STATISTICS -->
     <section class="sector-stats">
       <div class="container">
+        <hr class="section-divider">
         <div class="stats-header">
           <h2 class="stats-title">Performance Excellence</h2>
           <p class="stats-subtitle">Delivering superior construction outcomes through proven expertise and unwavering commitment to quality</p>
