--- a/trade.html
+++ b/trade.html
@@ -191,6 +191,7 @@
     <!-- TRADE STATISTICS -->
     <section class="sector-stats">
       <div class="container">
+        <hr class="section-divider">
         <div class="stats-header">
           <h2 class="stats-title">Trade Performance</h2>
           <p class="stats-subtitle">Driving commercial success through diversified operations</p>
