--- a/energy.html
+++ b/energy.html
@@ -191,6 +191,7 @@
     <!-- ENERGY STATISTICS -->
     <section class="sector-stats" lang="en">
       <div class="container">
+        <hr class="section-divider">
         <div class="stats-header">
           <h2 class="stats-title">Energy Sector Achievements</h2>
           <p class="stats-subtitle">Our commitment to sustainable energy development</p>
