Footer (mobile): force English rendering for Construction link via lang=en to avoid Turkish İ

--- a/construction.html
+++ b/construction.html
@@ -223,7 +223,7 @@
         <h3 class="footer-heading">QUICK ACCESS</h3>
         <ul class="footer-nav">
           <li><a href="index.html#home">Home</a></li>
-          <li><a href="construction.html">Construction</a></li>
+          <li><a href="construction.html" lang="en">Construction</a></li>
           <li><a href="energy.html">Energy</a></li>
           <li><a href="trade.html">Trade</a></li>
         </ul>
