--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <h3 class="footer-heading">QUICK ACCESS</h3>
           <ul class="footer-nav">
             <li><a href="index.html#home">HOME</a></li>
-            <li><a href="construction.html">CONSTRUCTION</a></li>
+            <li><a href="construction.html" lang="en">CONSTRUCTION</a></li>
             <li><a href="energy.html">ENERGY</a></li>
             <li><a href="trade.html">TRADE</a></li>
           </ul>
