About heading: enforce English casing with lang=en to fix uppercase I

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container header-content">
       <a class="logo" href="#home">
         <img src="images/logo-new.png" alt="FA Group">
-        <span class="header-slogan">Engineering Value. Powering the Future.</span>
+        <span class="header-slogan" lang="en">Engineering Value. Powering the Future.</span>
       </a>
       <button class="hamburger-menu" id="hamburgerMenu" type="button" aria-label="Menü aç">
         <span></span>
@@ -84,7 +84,7 @@
                 <span class="sector-title">CONSTRUCTION</span>
               </div>
               <div class="sector-body">
-                <span class="sector-subtitle">Engineering & Construction</span>
+                <span class="sector-subtitle">Engıneerıng & Constructıon</span>
               </div>
             </div>
             <div class="sector-card" data-sector="1">
@@ -111,7 +111,7 @@
     <section id="about" class="about-fa-group">
       <div class="container">
         <div class="about-intro">
-          <h2 class="about-main-title">Engıneerıng Value. Powerıng the Future</h2>
+          <h2 class="about-main-title" lang="en">Engineering Value<span class="mobile-br">.</span> <br class="mobile-br">Powering the Future</h2>
           <div class="about-content-wrapper">
             <p class="about-main-text">
               FA Group is a diversified company operating in the construction, energy, and commodity trade sectors. Established to provide integrated solutions across these strategic industries, the Group combines technical expertise, market intelligence, and financial discipline to deliver consistent value to its partners and stakeholders. Through its subsidiaries and strategic partnerships, FA Group executes large-scale infrastructure projects, develops sustainable energy initiatives, and facilitates global commodity transactions. Our operations are built on the principles of integrity, efficiency, and long-term growth, ensuring reliability and performance across every business line. With a professional team and an international outlook, FA Group continues to strengthen its position as a trusted partner in regional and global markets, contributing to economic development and sustainable progress.
