SEO: Add meta tags, sitemap, robots.txt, vercel.json with correct domain (group-fa.com)

--- a/construction.html
+++ b/construction.html
@@ -3,7 +3,23 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>FA Group — Construction</title>
+  <title>Construction Division | FA Group - Engineering & Building Excellence</title>
+  <meta name="description" content="FA Group Construction: World-class residential, commercial & industrial building solutions. Luxury villas, hospitals, infrastructure projects across Turkey.">
+  <meta name="keywords" content="construction, engineering, residential construction, commercial buildings, industrial facilities, infrastructure, FA Group, Turkey, Istanbul">
+  <link rel="canonical" href="https://www.group-fa.com/construction.html">
+  
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.group-fa.com/construction.html">
+  <meta property="og:title" content="Construction Division | FA Group">
+  <meta property="og:description" content="World-class construction solutions: residential, commercial, industrial projects with sustainable building practices.">
+  <meta property="og:image" content="https://www.group-fa.com/images/villalalar.png">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Construction Division | FA Group">
+  <meta name="twitter:description" content="World-class construction solutions with engineering excellence.">
+  <meta name="twitter:image" content="https://www.group-fa.com/images/villalalar.png">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
