--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>FA Group - Engineering & Construction Excellence</title>
+  <title>FA Group - Engineering & Construction Excellence | Construction, Energy, Trade</title>
+  <meta name="description" content="FA Group: Leading diversified company in construction, energy, and commodity trade sectors. Engineering value, powering the future with integrated solutions.">
+  <meta name="keywords" content="FA Group, construction, energy, trade, engineering, infrastructure, renewable energy, logistics, Istanbul, Turkey">
+  <meta name="author" content="FA Group">
+  <link rel="canonical" href="https://www.group-fa.com/">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.group-fa.com/">
+  <meta property="og:title" content="FA Group - Engineering & Construction Excellence">
+  <meta property="og:description" content="Leading diversified company in construction, energy, and commodity trade sectors. Engineering value, powering the future.">
+  <meta property="og:image" content="https://www.group-fa.com/images/logo-new.png">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://www.group-fa.com/">
+  <meta name="twitter:title" content="FA Group - Engineering & Construction Excellence">
+  <meta name="twitter:description" content="Leading diversified company in construction, energy, and commodity trade sectors.">
+  <meta name="twitter:image" content="https://www.group-fa.com/images/logo-new.png">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600;700&family=Inter:wght@400;500;600&family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
