--- a/energy.html
+++ b/energy.html
@@ -3,7 +3,23 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>FA Group — Energy</title>
+  <title>Energy Division | FA Group - Renewable Energy & Power Generation</title>
+  <meta name="description" content="FA Group Energy: Sustainable energy solutions, renewable power projects, solar, wind & hydroelectric installations. Smart grid technology and energy infrastructure.">
+  <meta name="keywords" content="renewable energy, solar power, wind energy, hydroelectric, power generation, energy infrastructure, smart grid, FA Group, Turkey">
+  <link rel="canonical" href="https://www.group-fa.com/energy.html">
+  
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.group-fa.com/energy.html">
+  <meta property="og:title" content="Energy Division | FA Group">
+  <meta property="og:description" content="Sustainable energy solutions: renewable projects, power generation, and smart grid technology.">
+  <meta property="og:image" content="https://www.group-fa.com/images/energy_2.png">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Energy Division | FA Group">
+  <meta name="twitter:description" content="Renewable energy solutions and power generation excellence.">
+  <meta name="twitter:image" content="https://www.group-fa.com/images/energy_2.png">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
