--- a/trade.html
+++ b/trade.html
@@ -3,7 +3,23 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>FA Group — Trade</title>
+  <title>Trade Division | FA Group - Commerce, Logistics & Transportation</title>
+  <meta name="description" content="FA Group Trade: Comprehensive trading, logistics & transportation solutions. Air cargo, maritime services, digital platforms. Global trade networks.">
+  <meta name="keywords" content="trade, commerce, logistics, transportation, air cargo, maritime services, supply chain, import export, FA Group, Turkey">
+  <link rel="canonical" href="https://www.group-fa.com/trade.html">
+  
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.group-fa.com/trade.html">
+  <meta property="og:title" content="Trade Division | FA Group">
+  <meta property="og:description" content="Comprehensive trading and logistics solutions: air cargo, maritime, and global trade networks.">
+  <meta property="og:image" content="https://www.group-fa.com/images/logistic_3.png">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Trade Division | FA Group">
+  <meta name="twitter:description" content="Trading and logistics excellence with global reach.">
+  <meta name="twitter:image" content="https://www.group-fa.com/images/logistic_3.png">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
