Fix theme-color meta tag for better browser compatibility (add media queries)

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="msapplication-TileColor" content="#d31717">
   <meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
-  <meta name="theme-color" content="#d31717">
+  <meta name="theme-color" content="#d31717" media="(prefers-color-scheme: light)">
+  <meta name="theme-color" content="#d31717" media="(prefers-color-scheme: dark)">
   
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600;700&family=Inter:wght@400;500;600&family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
