--- a/trade.html
+++ b/trade.html
@@ -38,7 +38,8 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="msapplication-TileColor" content="#d31717">
   <meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
-  <meta name="theme-color" content="#d31717">
+  <meta name="theme-color" content="#d31717" media="(prefers-color-scheme: light)">
+  <meta name="theme-color" content="#d31717" media="(prefers-color-scheme: dark)">
   
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
