--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <meta name="description" content="FA Group: Leading diversified company in construction, energy, and commodity trade sectors. Engineering value, powering the future with integrated solutions.">
   <meta name="keywords" content="FA Group, construction, energy, trade, engineering, infrastructure, renewable energy, logistics, Istanbul, Turkey">
   <meta name="author" content="FA Group">
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
   <link rel="canonical" href="https://www.group-fa.com/">
+  
+  <!-- Google Search Console - Verification code will be added here after setup -->
+  <!-- <meta name="google-site-verification" content="YOUR_CODE_HERE" /> -->
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
@@ -15,6 +19,10 @@
   <meta property="og:title" content="FA Group - Engineering & Construction Excellence">
   <meta property="og:description" content="Leading diversified company in construction, energy, and commodity trade sectors. Engineering value, powering the future.">
   <meta property="og:image" content="https://www.group-fa.com/images/logo-new.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:site_name" content="FA Group">
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
