--- a/energy.html
+++ b/energy.html
@@ -6,7 +6,11 @@
   <title>Energy Division | FA Group - Renewable Energy & Power Generation</title>
   <meta name="description" content="FA Group Energy: Sustainable energy solutions, renewable power projects, solar, wind & hydroelectric installations. Smart grid technology and energy infrastructure.">
   <meta name="keywords" content="renewable energy, solar power, wind energy, hydroelectric, power generation, energy infrastructure, smart grid, FA Group, Turkey">
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
   <link rel="canonical" href="https://www.group-fa.com/energy.html">
+  
+  <!-- Google Search Console - Verification code will be added here after setup -->
+  <!-- <meta name="google-site-verification" content="YOUR_CODE_HERE" /> -->
   
   <!-- Open Graph -->
   <meta property="og:type" content="website">
@@ -14,6 +18,10 @@
   <meta property="og:title" content="Energy Division | FA Group">
   <meta property="og:description" content="Sustainable energy solutions: renewable projects, power generation, and smart grid technology.">
   <meta property="og:image" content="https://www.group-fa.com/images/energy_2.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:site_name" content="FA Group">
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
@@ -297,7 +305,7 @@
       <div class="footer-contact">
         <h3 class="footer-heading">Contact Us</h3>
         <address>Levent District, Yeni Sülün Street, Begonya No.2<br>Beşiktaş, Istanbul Türkiye</address>
-        <a href="mailto:info@holding-fa.com" class="footer-email">info@holding-fa.com</a>
+        <a href="mailto:info@group-fa.com" class="footer-email">info@group-fa.com</a>
         <a href="tel:+902128129245" class="footer-phone">+90 212 812 92 45</a>
       </div>
     </div>
