--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         <div class="footer-contact">
           <h3 class="footer-heading">Contact Us</h3>
           <address>Levent District, Yeni Sülün Street, Begonya No.2<br>Beşiktaş, Istanbul Türkiye</address>
-          <a href="mailto:info@holding-fa.com" class="footer-email">info@holding-fa.com</a>
+          <a href="mailto:info@group-fa.com" class="footer-email">info@group-fa.com</a>
           <a href="tel:+902128129245" class="footer-phone">+90 212 812 92 45</a>
         </div>
       </div>
