--- a/trade.html
+++ b/trade.html
@@ -6,7 +6,11 @@
   <title>Trade Division | FA Group - Commerce, Logistics & Transportation</title>
   <meta name="description" content="FA Group Trade: Comprehensive trading, logistics & transportation solutions. Air cargo, maritime services, digital platforms. Global trade networks.">
   <meta name="keywords" content="trade, commerce, logistics, transportation, air cargo, maritime services, supply chain, import export, FA Group, Turkey">
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
   <link rel="canonical" href="https://www.group-fa.com/trade.html">
+  
+  <!-- Google Search Console - Verification code will be added here after setup -->
+  <!-- <meta name="google-site-verification" content="YOUR_CODE_HERE" /> -->
   
   <!-- Open Graph -->
   <meta property="og:type" content="website">
@@ -14,6 +18,10 @@
   <meta property="og:title" content="Trade Division | FA Group">
   <meta property="og:description" content="Comprehensive trading and logistics solutions: air cargo, maritime, and global trade networks.">
   <meta property="og:image" content="https://www.group-fa.com/images/logistic_3.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:site_name" content="FA Group">
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
@@ -300,7 +308,7 @@
       <div class="footer-contact">
         <h3 class="footer-heading">Contact Us</h3>
         <address>Levent District, Yeni Sülün Street, Begonya No.2<br>Beşiktaş, Istanbul Türkiye</address>
-        <a href="mailto:info@holding-fa.com" class="footer-email">info@holding-fa.com</a>
+        <a href="mailto:info@group-fa.com" class="footer-email">info@group-fa.com</a>
         <a href="tel:+902128129245" class="footer-phone">+90 212 812 92 45</a>
       </div>
     </div>
