Add Google Search Console verification meta tag to all pages

--- a/construction.html
+++ b/construction.html
@@ -9,8 +9,8 @@
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
   <link rel="canonical" href="https://www.group-fa.com/construction.html">
   
-  <!-- Google Search Console - Verification code will be added here after setup -->
-  <!-- <meta name="google-site-verification" content="YOUR_CODE_HERE" /> -->
+  <!-- Google Search Console Verification -->
+  <meta name="google-site-verification" content="s1YfMK8vjxyT-cYDj4sHQYJFbrdAJtimBvsZwSh_8l0" />
   
   <!-- Open Graph -->
   <meta property="og:type" content="website">
