--- a/energy.html
+++ b/energy.html
@@ -12,6 +12,9 @@
   <!-- Google Search Console Verification -->
   <meta name="google-site-verification" content="s1YfMK8vjxyT-cYDj4sHQYJFbrdAJtimBvsZwSh_8l0" />
   
+  <!-- Sitemap -->
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
+  
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.group-fa.com/energy.html">
