--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <!-- Google Search Console Verification -->
   <meta name="google-site-verification" content="s1YfMK8vjxyT-cYDj4sHQYJFbrdAJtimBvsZwSh_8l0" />
   
+  <!-- Sitemap -->
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
+  
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.group-fa.com/">
