--- a/index.html
+++ b/index.html
@@ -47,16 +47,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
   
-  <!-- Google Analytics 4 -->
+  <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-073LG1LKEZ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-073LG1LKEZ', {
-      'send_page_view': true,
-      'cookie_flags': 'SameSite=None;Secure'
-    });
+
+    gtag('config', 'G-073LG1LKEZ');
   </script>
 </head>
 <body class="home-page">
