Add Schema.org structured data markup for Organization and Services

--- a/construction.html
+++ b/construction.html
@@ -54,6 +54,29 @@
 
     gtag('config', 'G-073LG1LKEZ');
   </script>
+  
+  <!-- Schema.org Structured Data (Service - Construction) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "serviceType": "Construction & Engineering",
+    "provider": {
+      "@type": "Organization",
+      "name": "FA Group",
+      "url": "https://www.group-fa.com"
+    },
+    "areaServed": {
+      "@type": "Place",
+      "name": "Turkey"
+    },
+    "description": "World-class residential, commercial & industrial building solutions. Luxury villas, hospitals, infrastructure projects.",
+    "offers": {
+      "@type": "Offer",
+      "category": "Construction Services"
+    }
+  }
+  </script>
 </head>
 <body class="construction-page">
   <header class="site-header">
