--- a/energy.html
+++ b/energy.html
@@ -54,6 +54,29 @@
 
     gtag('config', 'G-073LG1LKEZ');
   </script>
+  
+  <!-- Schema.org Structured Data (Service - Energy) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "serviceType": "Renewable Energy & Power Generation",
+    "provider": {
+      "@type": "Organization",
+      "name": "FA Group",
+      "url": "https://www.group-fa.com"
+    },
+    "areaServed": {
+      "@type": "Place",
+      "name": "Turkey"
+    },
+    "description": "Sustainable energy solutions, renewable power projects, solar, wind & hydroelectric installations. Smart grid technology.",
+    "offers": {
+      "@type": "Offer",
+      "category": "Energy Services"
+    }
+  }
+  </script>
 </head>
 <body class="energy-page">
   <header class="site-header">
