--- a/index.html
+++ b/index.html
@@ -56,6 +56,47 @@
 
     gtag('config', 'G-073LG1LKEZ');
   </script>
+  
+  <!-- Schema.org Structured Data (Organization) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "FA Group",
+    "url": "https://www.group-fa.com",
+    "logo": "https://www.group-fa.com/images/logo-new.png",
+    "description": "Leading diversified company in construction, energy, and commodity trade sectors. Engineering value, powering the future.",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Levent District, Yeni Sülün Street, Begonya No.2",
+      "addressLocality": "Beşiktaş",
+      "addressRegion": "Istanbul",
+      "addressCountry": "TR"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+90-212-812-92-45",
+      "contactType": "Customer Service",
+      "email": "info@group-fa.com",
+      "availableLanguage": ["English", "Turkish"]
+    },
+    "sameAs": [
+      "https://www.linkedin.com/company/fa-group",
+      "https://twitter.com/fagroup"
+    ],
+    "founder": {
+      "@type": "Organization",
+      "name": "FA Group"
+    },
+    "foundingDate": "2020",
+    "areaServed": {
+      "@type": "Place",
+      "name": "Turkey"
+    },
+    "slogan": "Engineering Value. Powering the Future.",
+    "knowsAbout": ["Construction", "Energy", "Trade", "Engineering", "Infrastructure"]
+  }
+  </script>
 </head>
 <body class="home-page">
 
