--- a/trade.html
+++ b/trade.html
@@ -54,6 +54,29 @@
 
     gtag('config', 'G-073LG1LKEZ');
   </script>
+  
+  <!-- Schema.org Structured Data (Service - Trade) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "serviceType": "Trade & Logistics",
+    "provider": {
+      "@type": "Organization",
+      "name": "FA Group",
+      "url": "https://www.group-fa.com"
+    },
+    "areaServed": {
+      "@type": "Place",
+      "name": "Global"
+    },
+    "description": "Comprehensive trading, logistics & transportation solutions. Air cargo, maritime services, digital platforms. Global trade networks.",
+    "offers": {
+      "@type": "Offer",
+      "category": "Trading & Logistics Services"
+    }
+  }
+  </script>
 </head>
 <body class="trade-page">
   <header class="site-header">
