Add postalCode to Schema.org Organization address

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       "streetAddress": "Levent District, Yeni Sülün Street, Begonya No.2",
       "addressLocality": "Beşiktaş",
       "addressRegion": "Istanbul",
+      "postalCode": "34330",
       "addressCountry": "TR"
     },
     "contactPoint": {
