--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
   <meta name="twitter:description" content="Leading diversified company in construction, energy, and commodity trade sectors.">
   <meta name="twitter:image" content="https://www.group-fa.com/images/logo-new.png">
   
-  <!-- Favicons -->
-  <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico">
-  <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg">
-  <link rel="icon" type="image/png" sizes="96x96" href="/favicon/favicon-96x96.png">
+  <!-- Favicons - Root for Google -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+  <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#d31717" media="(prefers-color-scheme: light)">
