Favicon optimizasyonu: Google Search Console ve mobil uyumluluk
- 192x192 ve 512x512 favicon'lar root'a eklendi
- HTML favicon link sırası optimize edildi (Google standartları)
- favicon.ico için sizes='48x48' attribute eklendi
- Gereksiz shortcut icon tag'i kaldırıldı
- Theme-color meta tag'leri basitleştirildi
- Vercel.json'a 192x192 ve 512x512 header'ları eklendi
- Tüm HTML dosyaları (index, construction, energy, trade) güncellendi
- Google Search Console favicon gereksinimleri karşılandı

--- a/construction.html
+++ b/construction.html
@@ -32,15 +32,14 @@
   <meta name="twitter:description" content="World-class construction solutions with engineering excellence.">
   <meta name="twitter:image" content="https://www.group-fa.com/images/villalalar.png">
   
-  <!-- Favicons - Root for Google -->
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+  <!-- Favicons - Optimized for Google Search Console -->
+  <link rel="icon" href="/favicon.ico" sizes="48x48">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="/favicon-96x96.png" type="image/png" sizes="96x96">
+  <link rel="icon" href="/favicon-192x192.png" type="image/png" sizes="192x192">
+  <link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png" sizes="180x180">
   <link rel="manifest" href="/manifest.json">
-  <meta name="theme-color" content="#d31717" media="(prefers-color-scheme: light)">
-  <meta name="theme-color" content="#d31717" media="(prefers-color-scheme: dark)">
+  <meta name="theme-color" content="#d31717">
   
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
